
test_build_args=[
	'--include-prefix=cutil'
]

test_base=executable('test_base','test_base.c',include_directories:public_headers,link_with:project_target)
test('base',test_base)
#
# test_base=executable('test1','test1.c',include_directories:public_headers,link_with:project_target)
# test('test1',test_base)
#
# test_base=executable('test2','test1.c',include_directories:public_headers,link_with:project_target)
# test('test2',test_base)
